--- a/client/package.json
+++ b/client/package.json
@@ -10,17 +10,26 @@
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^2.20.0",
+    "@ethereumjs/block": "^10.0.0",
+    "@ethereumjs/common": "^10.0.0",
+    "@ethereumjs/util": "^10.0.0",
+    "@ethereumjs/vm": "^10.0.0",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "axios": "^1.12.2",
+    "buffer": "^6.0.3",
+    "ethereumjs-account": "^2.0.5",
     "isbot": "^5.1.31",
     "lucide-react": "^0.546.0",
+    "process": "^0.11.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.2",
     "reactflow": "^11.11.4",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "solc-js": "^1.0.1",
-    "sql.js": "^1.13.0"
+    "sql.js": "^1.13.0",
+    "web-solc": "^0.7.0"
   },
   "devDependencies": {
     "@react-router/dev": "^7.9.2",
